# scorpiusProject

./: .env.ai  .env.backup.20250925_225943  .env.docker  .env.example  .env.export  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_PLAN.md  DEV_ENVIRONMENT_PLAN.md  DOCKER_CLOUD_DEPLOYMENT.md  Dockerfile  Dockerfile.docling-cloud  Dockerfile.docling-optimized  GITHUB_SETUP.md  LOCAL_TESTING.md  QUICK_START.md  README.md  SETUP_LOCAL.md  TEST_COMPLET.md  activate_scorpius.sh  alembic.ini  ao_analysis_report_20250926_140724.json  conformity_report_20250926_133258.json  conformity_report_20250926_133546.json  deploy.sh  docker-compose.docling.yml  docker-compose.ghcr.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  login_test.json  main.py  pyproject.toml  recommandations.md  register_test.json  requirements-ai.txt  requirements-dev.txt  requirements-docling.txt  (+20 more)
.claude/: API_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  PROJECT_OVERVIEW.md
.github/workflows/: docker-build-push.yml
.specify/memory/: constitution.md
Examples/VSGP-AO/: AE.docx  BPU.xlsx  DPGF.xlsx  DQE.xlsx  Planning prévisionnel.pptx
alembic/: env.py
alembic/versions/: 001_add_tender_support.py  002_add_embeddings_table.py  71a8fecf90f8_add_vector_embeddings_table.py
demo/: test_real_pdf.py
docs/: AI_EXTRACTION.md  DOCKER_INITIALIZATION_GUIDE.md  DOCLING_MIGRATION_PLAN.md  DOCUMENT_ANALYSIS_ARCHITECTURE.md  OPENAI_INTEGRATION_ANALYSIS.md  derniere analyse.md  rag_architecture.md
migrations/: env.py
nginx/: nginx.conf
poc/: README.md  docling_api.py  docling_processor.py  run_docling_poc.sh
scripts/: 001_init_extensions.sql  E2E_TEST_PLAN.md  check_docker_env.sh  clear_database.py  demo_docling_v2.py  dev-setup.sh  fix_database.sh  init-db.sql  init_db.py  init_db_complete.py  init_docker_env.sh  init_postgres_all_models.py  init_postgres_tables.py  install_rag_dependencies.sh  run_all_tests.sh  setup_nlp_models.py  start_api.sh
specs/001-construire-le-mvp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __init__.py
src/core/: __init__.py  ai_config.py  config.py  exceptions.py  logging.py
src/db/: __init__.py  base.py  session.py
src/middleware/: __init__.py  auth.py
src/models/: __init__.py  analysis.py  audit.py  bid.py  company.py  compliance.py  document.py  document_embedding.py  document_type.py  embeddings.py  events.py  extracted_requirement.py  match.py  procurement_tender.py  requirements.py  user.py
src/nlp/: __init__.py  extractors.py  pipeline.py
src/processors/: __init__.py  base.py  doc_processor_docling.py  doc_processor_nlp_docling.py  docling_processor.py  (+6 more)
tests/: conftest.py  test_nlp_pipeline.py
(+108 files in other folders)
